Added new grids
New grids for UI modules

--- a/css/grids.css
+++ b/css/grids.css
@@ -5,71 +5,94 @@
 	box-sizing: border-box;
 }
 
-/* ------ Nav Bar ------ */
-.nav-container, .grid-container {
+.grid-container {
+	/*padding-bottom: 90rem;*/
+}
+
+.grid-item {
+	background-color: #eee;
+ 	border: .5px dashed #333;
+ 	text-align: center;
+}
+
+/* ------ Nav Bar  ------ */
+.grid, .grid-container {
 	display: -webkit-flex; 			/* Supports older browsers */
 	display: -ms-flex; 				/* Supports Internet 10 */
 	display: flex;
 	flex-wrap: -webkit-flex; 
 	flex-wrap: -ms-flex; 	
 	flex-wrap: wrap;
-	justify-content: space-around; 
+	/*justify-content: space-around; */
+
 }
 
-.nav-items a  {
-	padding-bottom: 0.3rem;
-	padding-top: 0.5rem;
-}
-
-nav a {
-	text-transform: uppercase;
-	font-size: 0.8rem;
-	color: black;
-	display: inline-block;
-	padding: 0rem 3.25rem 0.25rem 3.25rem;
-	text-decoration: none;
-	letter-spacing: 0.09em;
-}
-
-.nav-container {
-	box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.05); /* Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
-	align-items: center; /* Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
-	padding: 1rem;
-} 
-
-/* ------ Main Grid Container & Components ------ */
-.grid-container {
+section .grid {
 	padding-bottom: 90rem;
 }
 
-.g-block {
-	background-color: #eee;
- 	border: .5px dashed #333;
- 	text-align: center;
+nav.grid {
+  padding: 1rem;
 }
 
-.g-block.footer {
-	height: 200px;
+nav .grid-col-1of2 {
+	flex: 2 1 20%;
+}
+
+nav .grid-col-1of6 {
+	flex: 1 1 13%;
+}
+
+/* ------ Review Section ------ */
+
+.review {
+  display: flex;
+  flex-direction: column;
+}
+
+.review-content {
+  display: flex;
+  flex-direction: column;
+  margin-top: -1rem;
+}
+
+.review-star-rating {
+  display: flex;
+  flex-direction: row;
+}
+
+/* ------ Form Styling ------ */
+
+.grid-col-1of1, .grid-col-1of-3, .grid-col-1of2  {
+	display: flex;
+}
+
+form .grid-col-1of1 {
+	flex-direction: column;
+	align-content: flex-start; 
+}
+
+form .grid-col-1of2 {
 	flex: 1 1 100%;
 }
 
 /* ------ Landing Page Template ------ */
-.g-block.col-1of1-xs {
+.grid-item.col-1of1-xs {
 	height: 30px;
 	flex: 1 1 100%;
 }
 
-.g-block.col-1of1-s{
+.grid-item.col-1of1-s{
 	height: 55px;
 	flex: 1 1 100%;
 }
 
-.g-block.col-1of1-lg {
+.grid-item.col-1of1-lg {
 	height: 350px;
 	flex: 1 1 100%;
 }
 
-.g-block.col-1of3, .g-block.col-2of3, .g-block.col-3of3 {
+.grid-item.col-1of3, .grid-item.col-2of3, .grid-item.col-3of3 {
 	height: 200px;
 	flex: 1 1 20%;
 	margin-top: 1rem;
@@ -78,22 +101,22 @@ nav a {
 	margin-right: 3rem;
 }
 
-.g-block.col-1of2, .g-block.col-1of2-reverse {
+.grid-item.col-1of2, .grid-item.col-1of2-reverse {
 	height: 300px;
 	flex: 1 1 60%;
 }
 
-.g-block.col-2of2, .g-block.col-2of2-reverse {
+.grid-item.col-2of2, .grid-item.col-2of2-reverse {
 	height: 300px;
 	flex: 1 1 40%;
 }
 
-.g-block#title{ 
+.grid-item#title{ 
 	height: 50px;
 	flex: 3 1 100%;
 }
 
-.g-block.input-row1, .g-block.input-row4  {
+.grid-item.input-row1, .grid-item.input-row4  {
 	height: 30px;
 	flex: 1 1 27%;
 	margin-top: 1rem;
@@ -101,12 +124,12 @@ nav a {
 	margin-right: 1rem;
 }
 
-.g-block.input-row2 {
+.grid-item.input-row2 {
 	height: 30px;
 	flex: 2 1 57%;
 }
 
-.g-block.input-row3 {
+.grid-item.input-row3 {
 	height: 30px;
 	flex: 1 1 17%;
 	margin-top: 1rem;
@@ -114,7 +137,7 @@ nav a {
 	margin-right:0.7rem;
 }
 
-.g-block.button { 
+.grid-item.button { 
 	height: 50px;
 	flex: 1 1 3%;
 	margin-top: 1rem;
@@ -122,9 +145,14 @@ nav a {
 	margin-left: 1.5rem;
 }
 
-.g-block.blank {
+.grid-item.blank {
 	background-color: #FFF;
 	flex: 2 1 30%;
+}
+
+.grid-item.footer {
+	height: 200px;
+	flex: 1 1 100%;
 }
 
 /* ------ Support Template ------ */ 
@@ -148,14 +176,6 @@ nav a {
  	text-align: center;
 }
 
-.side-nav-container .menu-item1, .side-nav-container .menu-item2, .side-nav-container .menu-item3,
-.body-container  .menu-item1, .body-container  .menu-item2, .body-container .menu-item3 {
-	background-color: #ddd;
-	border: .5px dashed #333;
-	margin: .75rem;
-	text-align: center;
-}
-
 .side-nav-container.menu-item1, .side-nav-container.menu-item2, .side-nav-container.menu-item3 {
 	height: 100px;
 	flex: 1 1 20%;
@@ -171,6 +191,22 @@ nav a {
  	border: .5px dashed #333;
  }
 
+ .title-container .row-1of4, .title-container .row-2of4, .title-container .row-3of4, .title-container .row-4of4 {
+	background-color: #ddd;
+	border: .5px dashed #333;
+	margin: .75rem;
+	text-align: center;
+	flex: 1 1 50%;
+}
+
+.cart-container .col-1of4, .cart-container .col-2of4, .cart-container .col-3of4, .cart-container .col-4of4  {
+	background-color: #ddd;
+	border: .5px dashed #333;
+	margin: .75rem;
+	text-align: center;
+	flex: 1 1 100%;
+}
+
 /*.cost-container{
 	display: flex;
   	flex-direction: row;
@@ -181,31 +217,14 @@ nav a {
  	border: .5px dashed #333;
 }*/
 
-.title-container .row-1of4, .title-container .row-2of4, .title-container .row-3of4, .title-container .row-4of4 {
-	background-color: #ddd;
-	border: .5px dashed #333;
-	margin: .75rem;
-	text-align: center;
-	flex: 1 1 50%;
-}
-
-
-.cart-container .col-1of4, .cart-container .col-2of4, .cart-container .col-3of4, .cart-container .col-4of4  {
-	background-color: #ddd;
-	border: .5px dashed #333;
-	margin: .75rem;
-	text-align: center;
-	flex: 1 1 100%;
-}
-
 /* ------ Services Template ------ */
-.g-block#blank-row-1of1 {
+.grid-item#blank-row-1of1 {
 	background-color: #FFF;
 	flex: 1 1 100%;
 	height: 200px;
 }
 
-.g-block.col-1of2-equal, .g-block.col-2of2-equal {
+.grid-item.col-1of2-equal, .grid-item.col-2of2-equal {
 	height: 200px;
 	flex: 1 1 20%;
 	margin-right: 10rem;
@@ -234,9 +253,11 @@ nav a {
 	}
 
 	.top-left {
-	  position: absolute;
+/*	  position: absolute;
 	  top: 0rem;
-	  left: 5rem;
+	  left: 5rem;*/
+	  display: flex;
+	  justify-content: flex-start;
 	}
 
 	.top-left h1 {
