--- a/css/main.css
+++ b/css/main.css
@@ -190,7 +190,6 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 }
 
 .btn-submit {
-	/*font-family: "Suisse Intl Regular", Verdana, sans-serif; */
 	font-size: 0.9rem;
 	color: #004C45;
 	background-color: #fff;
@@ -325,23 +324,37 @@ nav-item {
 nav a {
 	text-transform: uppercase;
 	font-size: 0.8rem;
-	color: black;
+	color: #474747;
 	display: inline-block;
-	padding: 0rem 3.25rem 0.25rem 3.25rem;
+	padding: .5rem;
 	text-decoration: none;
 	letter-spacing: 0.09em;
 }
 
-/* ------ Hero Advertising ------*/
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-image: url("../img/hero-img.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  height: 30rem;
+.styleguide a {
+	padding-right: 5rem;
+	padding-left: 5rem;
 }
+
+nav .grid-col-1of6 a {
+	padding: 0rem;
+}
+
+nav .grid-col-1of6 img {
+	width: 30%;
+	height: auto;
+}
+
+nav .search-bar input {
+	border-radius: .8rem;
+}
+/*nav .search-bar {
+	width: 50vw;
+}*/
+
+
+
+/* ------ Hero Advertising ------*/
 
 .hero .text {
 	padding-top: 7rem;
