--- a/css/grids.css
+++ b/css/grids.css
@@ -19,7 +19,7 @@
 	flex-wrap: -webkit-flex; 
 	flex-wrap: -ms-flex; 	
 	flex-wrap: wrap;
-	/*justify-content: space-around; */
+	justify-content: space-around;
 
 }
 
@@ -43,7 +43,6 @@ nav .grid-col-1of6.search-bar  {
 	padding-right: 3rem;
 }
 
-
 /* ------ Hero Section ------ */
 .hero {
   display: flex;
@@ -54,7 +53,6 @@ nav .grid-col-1of6.search-bar  {
   background-size: 100%;
   height: 30rem;
 }
-
 
 /* ------ Review Section ------ */
 
