--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,31 @@ body {
 	letter-spacing: 0.03rem;
 }
 
-p, figcaption {
+code {
+	background: #EFEFEF;
+	padding: 1rem;
+	display: block;
+	max-width: 50rem;
+	font-size: 0.7rem;
+	line-height: 0.9rem;
+	margin-bottom: 2rem;
+}
+
+/* ------ Paragraph Styling ------*/
+p {
 	max-width: 38rem;
 }
 
+section.definition p, .citations p {
+	padding-bottom: 2.5rem;
+}
+
+/* ------ Nav Bar Styling ------*/
+nav.grid.styleguide {
+	box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.05); /* Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
+	justify-content: center;  /*Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
+	padding: 1rem;
+} 
 
 .sub-nav {
 	margin-top: 1rem;
@@ -38,6 +59,7 @@ p, figcaption {
 }
 
 
+/* ------ Header Styling ------*/
 /*Referenced Stack Overflow for bg colour to adjust to text length*/
 h1.template {
 	font-family: "Suisse Intl Regular", Verdana, sans-serif; 
@@ -72,38 +94,6 @@ h3 {
 	text-align: center;
 }
 
-nav.grid.styleguide {
-	box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.05); /* Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
-	justify-content: center;  /*Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
-	padding: 1rem;
-} 
-
-.grid a {
-	padding-bottom: 0;
-}
-
-section {
-	padding-bottom: 5rem;
-}
-
-section#task1, section#task2, section#task3, section#task4, section#task5 {
-	padding-bottom: 30px;
-}
-
-section.wireframes img {
-	width: 80%;
-    height: auto;
-}
-
-section.sitemap img, section.mockups img {
-	width: 60%;
-	height: auto;
-}
-
-section.definition p, .citations p {
-	padding-bottom: 2.5rem;
-}
-
 section h1  {
 	font-family: "SuisseIntl-Normal", Verdana, sans-serif; 
 	font-weight: 600;
@@ -115,20 +105,41 @@ section h1  {
 	padding-top: 2rem;
 }
 
-figure {
+section h2 {
+	padding-bottom: .5rem;
+}
+
+
+/* ------ Link Styling ------*/
+.grid a {
+	padding-bottom: 0;
+}
+
+
+/* ------ Section Styling ------*/
+section {
+	padding-bottom: 5rem;
+}
+
+section#task1, section#task2, section#task3, section#task4, section#task5 {
+	padding-bottom: 30px;
+}
+
+
+/* ------ Image Adjustments ------*/
+section.wireframes img {
+	width: 80%;
+    height: auto;
+}
+
+section.sitemap img, section.mockups img {
+	width: 60%;
+	height: auto;
+}
+
+/*figure {
 	margin-left: 0;
-}
-
-code {
-	background: #EFEFEF;
-	padding: 1rem;
-	display: block;
-	max-width: 50rem;
-	font-size: 0.7rem;
-	line-height: 0.9rem;
-	margin-bottom: 2rem;
-}
-
+}*/
 
 /* ---------- Interactive Elements ---------- */
 /* ------ In-Text Link ------*/
@@ -182,7 +193,7 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 	border: none;
 	text-transform: uppercase;
 	opacity: 0.9;
-	font-weight: 1000;
+	font-weight: 900;
 	margin-top: 2rem;
 	padding: 0;
 }
@@ -392,11 +403,11 @@ nav .search-bar input {
   margin: 0;
 }
 
-figure.product-item:hover img {
+.product-item:hover img {
   opacity: 0.4;
 }
 
-figure.product-item:hover .btn-position {
+.product-item:hover .btn-position {
   opacity: 1;
 }
 
@@ -429,19 +440,17 @@ figure.product-item:hover .btn-position {
 }
 
 p.price {
-	margin-top: -.1rem;
 	color: #474747;
 	font-size: .9rem;
-	white-space: nowrap;
+	margin: 0;
 }
 
-
-.container-product-listing figcaption {
+.container-product-listing p.product-name {
 	font-family: "Freight Big Pro", Verdana, sans-serif; 
 	font-size: 1.5rem;
 	letter-spacing: .08rem;
-	padding-top: 0.5rem;
 	color: #474747;
+	margin: 0;
 } 
 
 
