--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif; 
+	font-family: "Suisse Intl Regular", Verdana, sans-serif;
 	margin: 0rem;
 	font-size: 0.9rem;
 	letter-spacing: 0.03rem;
@@ -36,7 +36,7 @@ nav.grid.styleguide {
 	box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.05); /* Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
 	justify-content: center;  /*Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 	padding: 1rem;
-} 
+}
 
 .sub-nav {
 	margin-top: 1rem;
@@ -62,7 +62,7 @@ nav.grid.styleguide {
 /* ------ Header Styling ------*/
 /*Referenced Stack Overflow for bg colour to adjust to text length*/
 h1.template {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif; 
+	font-family: "Suisse Intl Regular", Verdana, sans-serif;
 	display: inline-block;
 	padding-bottom: 0;
 	padding-top: 4rem;
@@ -72,7 +72,7 @@ h1.template {
 }
 
 h1 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif; 
+	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
 	font-size: 1.8rem;
 	letter-spacing: 0.08rem;
 	text-align: center;
@@ -80,14 +80,14 @@ h1 {
 
 
 h2 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif; 
+	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
 	font-size: 1.5rem;
 	margin-bottom: 0;
 	letter-spacing: 0.08rem;
 }
 
 h3 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif; 
+	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
 	font-size: 1.2rem;
 	margin-bottom: 0;
 	letter-spacing: 0.04rem;
@@ -95,7 +95,7 @@ h3 {
 }
 
 section h1  {
-	font-family: "SuisseIntl-Normal", Verdana, sans-serif; 
+	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
 	font-weight: 600;
 	font-size: .9rem;
 	margin-bottom: 0;
@@ -121,7 +121,7 @@ section {
 	padding-bottom: 5rem;
 }
 
-section#task1, section#task2, section#task3, section#task4, 
+section#task1, section#task2, section#task3, section#task4,
 section#task5, section#task6, section#task7, section#task8 {
 	padding-bottom: 30px;
 }
@@ -183,7 +183,7 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 
 /* ------ Buttons ------*/
 .btn-main { /*-Referenced John Fauld's "Styling Form Buttons" article for styling buttons -->*/
-	font-family: "Suisse Intl Regular", Verdana, sans-serif; 
+	font-family: "Suisse Intl Regular", Verdana, sans-serif;
 	font-size: 0.8rem;
 	color: white;
 	background-color: #004C45;
@@ -213,7 +213,7 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 	opacity: 1;
 }
 
-.btn-submit:hover, .btn-submit:focus { 
+.btn-submit:hover, .btn-submit:focus {
 	border-bottom: 2px solid #004C45;
 }
 
@@ -270,14 +270,14 @@ input {
   box-sizing: border-box;
   color: #474747;
   margin: 0;
-} 
+}
 
 input[type=text]:hover{
   border: 1px solid #20605A;
   transition-property: border-color;
   transition-duration:0.4s;
   opacity: .5;
-} 
+}
 
 input[type=text]:focus {
 	color: #474747;
@@ -289,13 +289,13 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: #20605A;
-} 
+}
 
 
 /* ---------- Text Styling ---------- */
 /* Headings */
 h1.web {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif; 
+	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
 	font-size: 3rem;
 	margin-bottom: 0;
 	letter-spacing: 0.04rem;
@@ -307,7 +307,7 @@ h2.web {
 }
 
 h3.web {
-	font-family: "SuisseIntl-Normal", Verdana, sans-serif; 
+	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
 	font-weight: 600;
 	font-size: .9rem;
 	margin-bottom: 0;
@@ -379,7 +379,7 @@ nav .search-bar input {
 
 .hero button {
 	margin-top: 1rem;
-} 
+}
 
 /* ------ Review Post -------- */
 .review p.author {
@@ -423,7 +423,7 @@ nav .search-bar input {
 }
 
 .btn-quick-add {
-  	font-family: "Suisse Intl Regular", Verdana, sans-serif; 
+  	font-family: "Suisse Intl Regular", Verdana, sans-serif;
 	font-size: 0.8rem;
 	color: #20605A;
 	border: 2px solid #20605A;
@@ -457,12 +457,12 @@ p.price {
 }
 
 .container-product-listing p.product-name {
-	font-family: "Freight Big Pro", Verdana, sans-serif; 
+	font-family: "Freight Big Pro", Verdana, sans-serif;
 	font-size: 1.5rem;
 	letter-spacing: .08rem;
 	color: #474747;
 	margin: 0;
-} 
+}
 
 
 /* ------ Shipping Details ------ */
@@ -483,13 +483,28 @@ form .btn-item {
 
 label {
   color: #20605A;
-  font-family: "Suisse Intl Regular", Verdana, sans-serif; 
+  font-family: "Suisse Intl Regular", Verdana, sans-serif;
   margin-bottom: .5rem;
 }
 
+/*------- Footer---------*/
+.container-footer {
+	display: grid;
+	background: #EEEEEE;
+	padding-right: 5rem;
+	padding-left: 5rem;
+	grid-template-columns: 1.75fr 1fr 1fr;
+	grid-column-gap: 70px;
+	height: 250px;
+}
+.child-footer {
+	background: #EEEEEE;
+}
+
+
 #address{
 	width: 25rem;
-}	
+}
 
 #pc {
 	width: 14rem;
@@ -512,7 +527,7 @@ input {
 }
 
 
-/* ------ Support Template ------ */ 
+/* ------ Support Template ------ */
 .side-nav-container .menu-item1, .side-nav-container .menu-item2, .side-nav-container .menu-item3,
 .body-container  .menu-item1, .body-container  .menu-item2, .body-container .menu-item3 {
 	background-color: #ddd;
@@ -521,4 +536,3 @@ input {
 	text-align: center;
 }
 /* ---------- Modular Elements Ends ---------- */
-
