--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,30 @@ nav .search-bar input {
 	margin-top: 1rem;
 }
 
+/* ------ Individual Product Description -------- */
+
+
+.product-mod-image {
+	padding-left:  3rem;
+	padding-top: 2rem;
+	padding-bottom: 10rem;
+	float: left;
+}
+
+.product-mod-name {
+padding-top: 2rem;
+color: #474747;
+font-size: 2rem
+}
+
+.product-mod-container {
+	display: grid;
+	grid-template-columns: 1fr 1.5fr;
+	height: 600px;
+}
+
+
+
 /* ------ Review Post -------- */
 .review p.author {
 	color: #474747;
