--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,11 @@ nav a {
 	padding-left: 2.5rem;
 }
 
+nav.grid.topnav {
+	padding: 1rem;
+	border: 0.5px solid #eee;
+}
+
 nav .grid-col-1of6 a {
 	padding: 0rem;
 }
@@ -383,27 +388,38 @@ nav .search-bar input {
 
 /* ------ Individual Product Description -------- */
 
-
-.product-mod-image {
-	padding-left:  3rem;
-	padding-top: 2rem;
-	padding-bottom: 10rem;
-	float: left;
+.product-img img {
+	width: 70%;
+	height: auto;
+	display: flex;
 }
 
-.product-mod-name {
-padding-top: 2rem;
-color: #474747;
-font-size: 2rem
+h2.web.product {
+	font-family: "Suisse Intl Regular", Verdana, sans-serif;
+	font-size: 1.8rem;
+	color: #474747;
+	letter-spacing: 0.12rem;
 }
 
-.product-mod-container {
-	display: grid;
-	grid-template-columns: 1fr 1.5fr;
-	height: 600px;
+#detailed-product p {
+	letter-spacing: 0.05rem;
+	max-width: 30rem;
 }
 
+.product-img, .product-desc {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
 
+.product-desc {
+	width: 50%;
+	height: 90%;
+}
+
+.description-web-product {
+	font-family: "Suisse Intl Regular", Verdana, sans-serif;
+	font-size: 0.9rem;
+}
 
 /* ------ Review Post -------- */
 .review p.author {
