--- a/css/grids.css
+++ b/css/grids.css
@@ -5,12 +5,6 @@
 	box-sizing: border-box;
 }
 
-.grid-item {
-	background-color: #eee;
- 	border: .5px dashed #333;
- 	text-align: center;
-}
-
 /* ------ Nav Bar  ------ */
 .grid {
 	display: -webkit-flex; 			/* Supports older browsers */
@@ -23,16 +17,11 @@
 
 }
 
-section .grid {
-	padding-bottom: 90rem;
-}
 
-nav.grid {
-  padding: 1rem;
-}
+/* ------ Top Nav ------ */
 
 nav .grid-col-1of2 {
-	flex: 2 1 20%;
+	flex: 2 1 40%;
 }
 
 nav .grid-col-1of6  {
@@ -52,6 +41,13 @@ nav .grid-col-1of6.search-bar  {
   background-repeat: no-repeat;
   background-size: 100%;
   height: 30rem;
+}
+
+/* ------ Altenating Content ------ */
+
+.alternating-content.col-1of2-reverse{
+	display: flex;
+	justify-content: flex-end;
 }
 
 /* ------ Review Section ------ */
@@ -75,7 +71,7 @@ nav .grid-col-1of6.search-bar  {
 /* ------ Form Styling ------ */
 
 .grid-col-1of1, .grid-col-1of-3, .grid-col-1of2  {
-	display: flex;
+	/*display: flex;*/
 }
 
 form .grid-col-1of1 {
@@ -87,38 +83,32 @@ form .grid-col-1of2 {
 	flex: 1 1 100%;
 }
 
-/* ------ Landing Page Template ------ */
-.grid-item.col-1of1-xs {
+/* ------ Landing Page ------ */
+.col-1of1-xs {
 	height: 30px;
 	flex: 1 1 100%;
 }
 
-.grid-item.col-1of1-s{
+.col-1of1-s{
 	height: 55px;
 	flex: 1 1 100%;
 }
 
-.grid-item.col-1of1-lg {
+.col-1of1-lg {
 	height: 350px;
 	flex: 1 1 100%;
 }
 
-.grid-item.col-1of3, .grid-item.col-2of3, .grid-item.col-3of3 {
-	height: 200px;
-	flex: 1 1 20%;
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-	margin-left: 3rem;
-	margin-right: 3rem;
+.col-1of3, .col-2of3, .col-3of3 {
+	flex-basis: 20%;
 }
 
-.grid-item.col-1of2, .grid-item.col-1of2-reverse {
-	height: 300px;
-	flex: 1 1 60%;
+
+.col-1of2, .col-1of2-reverse {
+	flex: 2 1 80%;
 }
 
-.grid-item.col-2of2, .grid-item.col-2of2-reverse {
-	height: 300px;
+.col-2of2, .col-2of2-reverse {
 	flex: 1 1 40%;
 }
 
@@ -127,7 +117,7 @@ form .grid-col-1of2 {
 	flex: 3 1 100%;
 }
 
-.grid-item.input-row1, .grid-item.input-row4  {
+.input-row1, .input-row4  {
 	height: 30px;
 	flex: 1 1 27%;
 	margin-top: 1rem;
@@ -135,12 +125,12 @@ form .grid-col-1of2 {
 	margin-right: 1rem;
 }
 
-.grid-item.input-row2 {
+.input-row2 {
 	height: 30px;
 	flex: 2 1 57%;
 }
 
-.grid-item.input-row3 {
+.input-row3 {
 	height: 30px;
 	flex: 1 1 17%;
 	margin-top: 1rem;
@@ -148,18 +138,18 @@ form .grid-col-1of2 {
 	margin-right:0.7rem;
 }
 
-.grid-item.button { 
+/*.grid-item.button { 
 	height: 50px;
 	flex: 1 1 3%;
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 	margin-left: 1.5rem;
-}
+}*/
 
-.grid-item.blank {
+/*.grid-item.blank {
 	background-color: #FFF;
 	flex: 2 1 30%;
-}
+}*/
 
 .grid-item.footer {
 	height: 200px;
