--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,16 @@
 /*<!--The structure of this CSS document was built from referencing Weeks 2's lab tutorials-->*/
 html {
 	line-height: 1.8rem;
-	padding: 3rem 3rem;
+	/*padding: 3rem 3rem;*/
 }
 
 body {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif;
-	margin: 0rem;
+	font-family: "SuisseIntl-Regular", Verdana, sans-serif;
+	margin: 0;
 	font-size: 0.9rem;
 	letter-spacing: 0.03rem;
+	left: 7rem;
+	color: #474747;
 }
 
 code {
@@ -19,7 +21,22 @@ code {
 	max-width: 30rem;
 	font-size: 0.7rem;
 	line-height: 0.9rem;
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
+}
+
+a {
+	color: #000;
+	text-decoration: none;
+}
+
+section.intext a:hover, section.intext a:focus, section.intext a:active {
+	color: #20605A;
+	text-decoration: none;
+	transition: color 0.5s;
+}
+
+ol {
+	margin-top: 0;
 }
 
 /* ------ Paragraph Styling ------*/
@@ -33,92 +50,110 @@ section.definition p, .citations p {
 
 /* ------ Nav Bar Styling ------*/
 nav.grid.styleguide {
-	box-shadow: 1px 3px 5px 1px rgba(0,0,0,0.05); /* Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.05);  Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp 
 	justify-content: center;  /*Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
-	padding: 1rem;
+	padding: .5rem;
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	/*left: 120px;*/
+	left:0;
+	right: 0;
+	background-color:#fff;
+}
+
+nav.grid.styleguide a {
+	color: #474747;
+}
+
+nav.grid.styleguide a:hover, nav.grid.styleguide a:active  {
+	color: #000;
 }
 
 .sub-nav {
-	margin-top: 1rem;
-	margin-bottom: 2rem;
+  /*height: 50px;*/
+  width: 100%;
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  padding: .5rem;
+  border-bottom: 1px solid #C8C8C8;
 }
 
 /* Nav bar tutorial from https://www.w3schools.com/howto/howto_css_navbar_border.asp */
 .sub-nav a  {
-	/*padding: 2rem;*/
 	text-transform: uppercase;
 	letter-spacing: 0.05rem;
 	color: #20605A;
-	border: 2px solid #20605A;
 	font-size: .8rem;
+	display: inline-block;
+	text-align: center;
 }
 
 .sub-nav a:hover, .sub-nav a:active  {
-	background-color: #20605A;
-	color: white;
+	color: #20605A;
 }
 
 
 /* ------ Header Styling ------*/
 /*Referenced Stack Overflow for bg colour to adjust to text length*/
-h1.template {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif;
-	display: inline-block;
-	padding-bottom: 0;
-	padding-top: 4rem;
-	border-bottom: 1.5px solid #000;
-	letter-spacing: 0.1rem;
+/*h1.styleguide {*/
+	/*font-family: "SuisseIntl-Regular", Verdana, sans-serif;*/
+	/*display: inline-block;*/
+	/*margin-bottom: 1rem;*/
+	/*border-bottom: 1.5px solid #000;*/
+/*	letter-spacing: 0.1rem;
 	font-size: 0.8rem;
 }
-
-h1 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
+*/
+/*h1 {
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
 	font-size: 1.8rem;
 	letter-spacing: 0.08rem;
 	text-align: center;
-}
+	margin: 0;
+	padding: 0;
+}*/
 
 
 h2 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
 	font-size: 1.5rem;
-	margin-bottom: 0;
 	letter-spacing: 0.08rem;
+	margin: 0;
 }
 
-h3 {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
+/*h3 {
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
 	font-size: 1.2rem;
 	margin-bottom: 0;
 	letter-spacing: 0.04rem;
 	text-align: center;
-}
+}*/
 
 section h1  {
 	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
-	font-weight: 600;
-	font-size: .9rem;
-	margin-bottom: 0;
-	letter-spacing: 0.1rem;
+	font-weight: 400;
+	font-size: .8rem;
+	letter-spacing: 0.08rem;
 	text-transform: uppercase;
 	text-align: left;
 	padding-top: 2rem;
 }
 
+
 section h2 {
 	padding-bottom: .5rem;
+	font-size: 1.4rem;
+	letter-spacing: 0.08rem;
 }
-
-
-/* ------ Link Styling ------*/
-.grid a {
-	padding-bottom: 0;
-}
-
 
 /* ------ Section Styling ------*/
-section {
-	padding-bottom: 5rem;
+section.citations, section.styleguide  {
+	padding: 3rem;
 }
 
 section#task1, section#task2, section#task3, section#task4,
@@ -148,22 +183,15 @@ section.sitemap img, section.mockups img {
 	width: 80%;
  }
 
-/*figure {
-	margin-left: 0;
-}*/
+ section .art-direction img {
+ 	display: block;
+ } 
 
 /* ---------- Interactive Elements ---------- */
 /* ------ In-Text Link ------*/
-a {
+section .intext a {
 	color: #339F95;
 	text-decoration: none;
-}
-
-a:hover, a:focus, a:active {
-	background-color: white;
-	color: #20605A;
-	text-decoration: none;
-	transition: color 0.5s;
 }
 
 section.in-text a {
@@ -183,9 +211,8 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 
 /* ------ Buttons ------*/
 .btn-main { /*-Referenced John Fauld's "Styling Form Buttons" article for styling buttons -->*/
-	font-family: "Suisse Intl Regular", Verdana, sans-serif;
+	font-family: "SuisseIntl-Regular", Verdana, sans-serif;
 	font-size: 0.8rem;
-	color: white;
 	background-color: #004C45;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
@@ -194,6 +221,7 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 	opacity: 0.9;
 	border: none;
 	margin-top: 2rem;
+	color: #fff;
 }
 
 .btn-submit {
@@ -205,8 +233,8 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 	text-transform: uppercase;
 	opacity: 0.9;
 	font-weight: 900;
-	margin-top: 2rem;
-	padding: 0;
+	/*position: absolute;*/
+	/*left: 36rem;*/
 }
 
 .btn-main:hover, .btn-main:focus, .btn-submit:hover, .btn-submit:focus { /*Reference W3schools.com for styling button hover*/
@@ -219,7 +247,6 @@ section.in-text a:hover, section.in-text a:focus, section.in-text a:active {
 
 /* ------ Colour Swatches ------*/
 div {
-	height: 150px;
 	display: inline-block;
 }
 
@@ -260,9 +287,8 @@ div.grey p.blk-text, div.green p.blk-text  {
 	color: #000;
 }
 
-/* ------ Forms ------*/
-input {
-  /*max-width: 50rem;*/
+/* ------ Forms, Text Fields ------*/
+input, select {
   padding: 5px 10px; /*top and bottom, right and left*/
   display: block;
   border: 1px solid #C8C8C8;
@@ -270,6 +296,8 @@ input {
   box-sizing: border-box;
   color: #474747;
   margin: 0;
+  margin-bottom: 0;
+  background-color: #fff;
 }
 
 input[type=text]:hover{
@@ -280,7 +308,23 @@ input[type=text]:hover{
 }
 
 input[type=text]:focus {
-	color: #474747;
+	color: #000;
+}
+
+/*.product-desc option, {
+	font-family: "SuisseIntl-Regular";
+}*/
+
+.product-desc select, .product-desc input#quantity {
+	display: inline-block;
+}
+
+.product-desc label {
+	font-size: 1.3rem;
+}
+
+.product-desc input#quantity {
+	max-width: 5rem;
 }
 
 /* Remove default outline on text inputs from https://stackoverflow.com/questions/1457849/how-to-remove-the-border-highlight-on-an-input-text-element */
@@ -290,257 +334,6 @@ textarea:focus,
 button:focus {
     outline: #20605A;
 }
-
-
-/* ---------- Text Styling ---------- */
-/* Headings */
-h1.web {
-	font-family: "FreightBigPro-SemiBold", Verdana, sans-serif;
-	font-size: 3rem;
-	margin-bottom: 0;
-	letter-spacing: 0.04rem;
-	text-transform: none;
-}
-
-h2.web {
-	font-size: 2rem;
-}
-
-h3.web {
-	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
-	font-weight: 600;
-	font-size: .9rem;
-	margin-bottom: 0;
-	letter-spacing: 0.1rem;
-	text-transform: uppercase;
-	text-align: left;
-}
-
-
-/* ---------- Modular Elements ---------- */
-/* ------ Nav Bar ------*/
-
-nav {
-	position: unset;
-}
-
-nav-item {
-	margin-bottom: 0;
-}
-
-nav a {
-	text-transform: uppercase;
-	font-size: 0.8rem;
-	color: #474747;
-	display: inline-block;
-	padding: .5rem;
-	text-decoration: none;
-	letter-spacing: 0.09em;
-}
-
-.styleguide a {
-	padding-right: 2.5rem;
-	padding-left: 2.5rem;
-}
-
-nav.grid.topnav {
-	padding: 1rem;
-	border: 0.5px solid #eee;
-}
-
-nav .grid-col-1of6 a {
-	padding: 0rem;
-}
-
-nav .grid-col-1of6 img {
-	width: 30%;
-	height: auto;
-}
-
-nav .search-bar input {
-	border-radius: .8rem;
-}
-/*nav .search-bar {
-	width: 50vw;
-}*/
-
-
-
-/* ------ Hero Advertising ------*/
-
-.hero .text {
-	padding-top: 7rem;
-	padding-left: 3rem;
-}
-
-.hero h1 {
-  font-family: "Freight Big Pro";
-  font-size: 3rem;
-  text-transform: none;
-  color: #474747;
-  max-width: 30rem;
-  line-height: 4rem;
-}
-
-.hero button {
-	margin-top: 1rem;
-}
-
-/* ------ Individual Product Description -------- */
-
-.product-img img {
-	width: 70%;
-	height: auto;
-	display: flex;
-}
-
-h2.web.product {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif;
-	font-size: 1.8rem;
-	color: #474747;
-	letter-spacing: 0.12rem;
-}
-
-#detailed-product p {
-	letter-spacing: 0.05rem;
-	max-width: 30rem;
-}
-
-.product-img, .product-desc {
-	margin-bottom: 0;
-	padding-bottom: 0;
-}
-
-.product-desc {
-	width: 50%;
-	height: 90%;
-}
-
-.description-web-product {
-	font-family: "Suisse Intl Regular", Verdana, sans-serif;
-	font-size: 0.9rem;
-}
-
-/* ------ Review Post -------- */
-.review p.author {
-	color: #474747;
-}
-
-.review h2, .review-body p  {
-	color: #474747;
-}
-
-.review-body p {
-	margin-top: -1rem;
-}
-
-.review-star-rating p {
-  color: #FED670;
-  padding-right: 1rem;
-  font-size: 1.2rem;
-}
-
-
-/* ------ Product Listing -------- */
-.container-product-listing {
-  position: relative;
-}
-
-.container-product-listing img {
-  width: 40%;
-  height: auto;
-  transition: .5s ease;
-  padding: 0;
-  margin: 0;
-}
-
-.product-item:hover img {
-  opacity: 0.4;
-}
-
-.product-item:hover .btn-position {
-  opacity: 1;
-}
-
-.btn-quick-add {
-  	font-family: "Suisse Intl Regular", Verdana, sans-serif;
-	font-size: 0.8rem;
-	color: #20605A;
-	border: 2px solid #20605A;
-	/*background-color: #fff;*/
-	letter-spacing: 0.05rem;
-	text-transform: uppercase;
-	padding: 0.5rem 1rem;
-	border-radius: 1.2rem;
-	font-weight: 900;
-	opacity: 0.9;
-}
-
-.btn-quick-add:hover {
-	color: #fff;
-    background-color: #20605A;
-}
-
-.btn-position {
-  opacity: 0;
-  position: absolute;
-  top: 160%;
-  left: 18%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-p.price {
-	color: #474747;
-	font-size: .9rem;
-	margin: 0;
-}
-
-.container-product-listing p.product-name {
-	font-family: "Freight Big Pro", Verdana, sans-serif;
-	font-size: 1.5rem;
-	letter-spacing: .08rem;
-	color: #474747;
-	margin: 0;
-}
-
-
-/* ------ Shipping Details ------ */
-
-form .name-item, form .contact-item, form .grid-col-1of3 {
-	padding-right: 4rem;
-}
-
-form {
-	padding-top: 2rem;
-}
-
-form .btn-item {
-	float: right;
-	padding-right: 35rem;
-}
-
-
-label {
-  color: #20605A;
-  font-family: "Suisse Intl Regular", Verdana, sans-serif;
-  margin-bottom: .5rem;
-}
-
-/*------- Footer---------*/
-.container-footer {
-	display: grid;
-	background: #EEEEEE;
-	padding-right: 5rem;
-	padding-left: 5rem;
-	grid-template-columns: 1.75fr 1fr 1fr;
-	grid-column-gap: 70px;
-	height: 250px;
-}
-.child-footer {
-	background: #EEEEEE;
-}
-
 
 #address{
 	width: 25rem;
@@ -562,9 +355,369 @@ label {
 	width: 10rem;
 }
 
-input {
-	margin-bottom: 2rem;
+/* ---------- Text Styling ---------- */
+/* Headings */
+h1 {
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
+	font-size: 3rem;
+	margin-bottom: 0;
+	letter-spacing: 0.1rem;
 }
+
+h2 {
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
+	font-size: 2rem;
+	margin-bottom: 0;
+	letter-spacing: 0.1rem;
+}
+
+h3 {
+	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
+	font-weight: 400;
+	font-size: .9rem;
+	margin-bottom: 0;
+	letter-spacing: 0.05rem;
+	text-transform: uppercase;
+	text-align: left;
+}
+
+
+/* ---------- Modular Elements ---------- */
+/* ------ Top Nav Bar ------*/
+
+.announcement-bar, .sub-footer{
+	color: #fff;
+	background-color: #004C45;
+	width: 100%;
+	text-align: center;
+	font-size: 0.75rem;
+	letter-spacing: 0.04rem;
+}
+
+nav a {
+	text-transform: uppercase;
+	font-size: 0.8rem;
+	color: #474747;
+	display: inline-block;
+	padding: .5rem;
+	text-decoration: none;
+	letter-spacing: 0.09em;
+}
+
+/*.styleguide a {*/
+	/*padding-right: 2.5rem;*/
+	/*padding-left: 2.5rem;*/
+/*}*/
+
+nav.grid.topnav {
+	padding: 0;
+	border: 0.5px solid #eee;
+}
+
+nav.grid.topnav img.logo {
+	margin-left: 4rem;
+}  
+
+nav.grid.topnav a {
+	padding-top: 1rem;
+	padding-bottom: 0;
+	font-size: 0.7rem;
+	letter-spacing: 0.03rem;
+}  
+
+ nav.grid.topnav input {
+ 	margin-top: 0.5rem;
+ }
+
+nav .grid-col-1of6 a {
+	padding: 0rem;
+}
+
+nav .grid-col-1of6 img {
+	width: 20%;
+	height: auto;
+}
+
+nav .search-bar input {
+	border-radius: .8rem;
+	height: 2rem;
+}
+/*nav .search-bar {
+	width: 50vw;
+}*/
+
+
+/* ------ Hero Advertising ------*/
+
+.hero .text {
+	padding-top: 10rem;
+	padding-left: 4.5rem;
+}
+
+.hero h1 {
+  font-family: "Freight Big Pro";
+  font-size: 3rem;
+  text-transform: none;
+  color: #474747;
+  max-width: 30rem;
+  line-height: 4rem;
+  text-align: left;
+}
+
+.hero button {
+	margin-top: 1rem;
+}
+
+/* ------ Home Menu Items------*/
+.menu {
+	position: relative;
+}
+
+.menu img {
+	width: 15rem;
+	height: 100%;
+}
+
+
+.menu p {
+	font-family: "FreightBigPro-Book";
+	font-size: 1.5rem;
+	letter-spacing: 0.05rem;
+	position: absolute;
+	top: 3.5rem;
+	left: 3rem;
+	background-color: rgba(255, 255, 255, 0.85);
+	padding: 2rem;
+}
+
+.menu.col-1of3, .menu.col-2of3, .menu.col-3of3 {
+	margin-bottom: 5rem;
+	margin-top: 4rem;
+}
+
+/* ------ Alternating Content-----*/
+.alternating-content img {
+	width: 35rem;
+	height: 100%;
+}
+
+.alternating-content.col-2of2, .alternating-content.col-2of2-reverse  {
+	overflow: auto;
+	padding-left: 4rem;
+}
+
+.alternating-content.col-2of2 p, .alternating-content.col-2of2-reverse p {
+	max-width: 25rem;
+}
+
+
+/* ------ About Us -------- */
+.values img {
+	width: 30%;
+	height: auto;
+}
+
+.values {
+	text-align: center;
+}
+
+/* ------ Individual Product Description -------- */
+.product-img img {
+	width: 35rem;
+	height: auto;
+}
+
+h2.web.product {
+	font-family: "SuisseIntl-Regular", Verdana, sans-serif;
+	font-size: 1.9rem;
+	color: #474747;
+	letter-spacing: 0.15rem;
+	padding: 0;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
+#detailed-product p {
+	letter-spacing: 0.05rem;
+	max-width: 30rem;
+}
+
+.product-img, .product-desc {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+.product-desc {
+	margin: auto;
+	margin-left: 8rem;
+}
+
+.product-desc .review-star-rating p {
+	font-size: 1.5rem;
+}
+
+.description-web-product {
+	font-family: "SuisseIntl-Regular", Verdana, sans-serif;
+	font-size: 0.9rem;
+	padding-top: 1.8rem;
+	padding-bottom: 1.8rem;
+	margin: 0;
+}
+
+h1.web {
+	padding-top: 0;
+}
+
+.review-content h2 {
+	padding-bottom: 2rem;
+}
+
+
+
+/* ------ Review Post -------- */
+.review p.author {
+	color: #474747;
+}
+
+.review h2, .review-body p  {
+	color: #474747;
+}
+
+.review-body p {
+	margin-top: -1rem;
+}
+
+.review-star-rating p {
+  color: #FED670;
+  padding-right: 1rem;
+  font-size: 1.2rem;
+}
+
+
+/* ------ Product Listings -------- */
+.container-product-listing, .product-item {
+  position: relative;
+}
+
+.container-product-listing img {
+  width: 40%;
+  height: auto;
+  transition: .5s ease;
+}
+
+.product-item:hover img {
+  opacity: 0.4;
+}
+
+.product-item:hover .btn-position {
+  opacity: 1;
+}
+
+.btn-quick-add {
+  	font-family: "SuisseIntl-Regular", Verdana, sans-serif;
+	font-size: 0.8rem;
+	color: #20605A;
+	border: 2px solid #20605A;
+	letter-spacing: 0.05rem;
+	text-transform: uppercase;
+	padding: 0.5rem 1rem;
+	border-radius: 1.2rem;
+	font-weight: 900;
+	opacity: 0.9;
+}
+
+.btn-quick-add:hover {
+	color: #fff;
+    background-color: #20605A;
+}
+
+.btn-position {
+  opacity: 0;
+  position: absolute;
+  top: 11rem;
+  left: 3rem;
+  text-align: center;
+}
+
+p.price {
+	color: #474747;
+	font-size: .9rem;
+	margin: 0;
+}
+
+.container-product-listing p.product-name {
+	font-family: "FreightBigPro-Book", Verdana, sans-serif;
+	font-size: 1.5rem;
+	letter-spacing: .08rem;
+	color: #474747;
+	margin: 0;
+}
+
+/* ------ Shipping Details ------ */
+
+form .name-item, form .contact-item, form .grid-col-1of3 {
+	padding-right: 4rem;
+}
+
+form {
+	padding-top: 2rem;
+}
+
+form .btn-item {
+	float: right;
+	padding-right: 35rem;
+}
+
+label {
+  color: #20605A;
+  font-family: "SuisseIntl-Regular", Verdana, sans-serif;
+  margin-bottom: .5rem;
+}
+
+/*------- Footer---------*/
+.container-footer {
+	display: grid;
+	background: #F2EAE4;
+	padding-right: 4rem;
+	padding-left: 4rem;
+	padding-top: 2rem;
+	margin-top: 6rem;
+	margin-bottom: 0;
+	grid-template-columns: 1.75fr 1fr 1fr;
+	grid-column-gap: 70px;
+	height: 17rem;
+	font-size: 0.8rem;
+}
+
+.child-footer.about {
+	max-width: 20rem;
+}
+
+.child-footer.location {
+	max-width: 12rem;
+}
+
+.child-footer.contact {
+	max-width: 10.1rem;
+}
+
+.sub-footer p {
+	display: inline-block;
+	margin: 0;
+}
+
+.sub-footer a {
+	color: #fff;
+	/*text-decoration: none;*/
+	opacity: 0.95;
+	letter-spacing: 0.03rem;
+
+}
+
+.sub-footer a:hover, .sub-footer a:focus {
+	opacity: 1;
+}
+
 
 
 /* ------ Support Template ------ */
