--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 /*<!--The structure of this CSS document was built from referencing Weeks 2's lab tutorials-->*/
 html {
 	line-height: 1.8rem;
-	/*padding: 3rem 3rem;*/
 }
 
 body {
@@ -48,30 +47,14 @@ section.definition p, .citations p {
 	padding-bottom: 2.5rem;
 }
 
+p.about-desc {
+	text-align: center;
+	padding-top: 5rem;
+	margin: auto;
+}
+
 /* ------ Nav Bar Styling ------*/
-nav.grid.styleguide {
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.05);  Box shadow from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp 
-	justify-content: center;  /*Center align items from https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
-	padding: .5rem;
-	position: fixed;
-	z-index: 10;
-	top: 0;
-	/*left: 120px;*/
-	left:0;
-	right: 0;
-	background-color:#fff;
-}
-
-nav.grid.styleguide a {
-	color: #474747;
-}
-
-nav.grid.styleguide a:hover, nav.grid.styleguide a:active  {
-	color: #000;
-}
-
 .sub-nav {
-  /*height: 50px;*/
   width: 100%;
   position: fixed;
   z-index: 11;
@@ -99,26 +82,6 @@ nav.grid.styleguide a:hover, nav.grid.styleguide a:active  {
 
 
 /* ------ Header Styling ------*/
-/*Referenced Stack Overflow for bg colour to adjust to text length*/
-/*h1.styleguide {*/
-	/*font-family: "SuisseIntl-Regular", Verdana, sans-serif;*/
-	/*display: inline-block;*/
-	/*margin-bottom: 1rem;*/
-	/*border-bottom: 1.5px solid #000;*/
-/*	letter-spacing: 0.1rem;
-	font-size: 0.8rem;
-}
-*/
-/*h1 {
-	font-family: "FreightBigPro-Book", Verdana, sans-serif;
-	font-size: 1.8rem;
-	letter-spacing: 0.08rem;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-}*/
-
-
 h2 {
 	font-family: "FreightBigPro-Book", Verdana, sans-serif;
 	font-size: 1.5rem;
@@ -126,21 +89,13 @@ h2 {
 	margin: 0;
 }
 
-/*h3 {
-	font-family: "FreightBigPro-Book", Verdana, sans-serif;
-	font-size: 1.2rem;
-	margin-bottom: 0;
-	letter-spacing: 0.04rem;
-	text-align: center;
-}*/
-
 section h1  {
 	font-family: "SuisseIntl-Normal", Verdana, sans-serif;
 	font-weight: 400;
 	font-size: .8rem;
 	letter-spacing: 0.08rem;
 	text-transform: uppercase;
-	text-align: left;
+	/*text-align: left;*/
 	padding-top: 2rem;
 }
 
@@ -151,9 +106,13 @@ section h2 {
 	letter-spacing: 0.08rem;
 }
 
+section.values h3.web {
+	text-align: center;
+}
+
 /* ------ Section Styling ------*/
 
-section.about, section.home {
+section.about, section.home, section.shop {
 	padding-bottom: 8rem;
 }
 section.citations, section.styleguide  {
@@ -315,10 +274,6 @@ input[type=text]:focus {
 	color: #000;
 }
 
-/*.product-desc option, {
-	font-family: "SuisseIntl-Regular";
-}*/
-
 .product-desc select, .product-desc input#quantity {
 	display: inline-block;
 }
@@ -408,11 +363,6 @@ nav a {
 	letter-spacing: 0.09em;
 }
 
-/*.styleguide a {*/
-	/*padding-right: 2.5rem;*/
-	/*padding-left: 2.5rem;*/
-/*}*/
-
 nav.grid.topnav {
 	padding: 0;
 	border: 0.5px solid #eee;
@@ -455,44 +405,35 @@ nav .search-bar {
 /* ------ Hero Advertising ------*/
 
 .hero .text {
-	padding-top: 7rem;
+	padding-top: 4.5rem;
 	padding-left: 4.5rem;
 }
 
-.hero h1, .hero-about h1 {
+.hero h1, .shop h1 .about h1 {
   font-family: "FreightBigPro-Book";
   font-size: 3rem;
   text-transform: none;
   color: #474747;
-  max-width: 30rem;
   line-height: 4rem;
   text-align: left;
+  max-width: 35rem;
 }
 
-.hero.shop .text {
-	margin: auto;
-	text-align: center;
-	padding: 0;
+.shop p {
+	 max-width: 25rem;
 }
 
-.hero.shop h1, .hero.shop p {
+.about > .hero > .text > h1 {
 	text-align: center;
+	color: #fff;
 }
 
 .hero button {
 	margin-top: 1rem;
 }
 
-.hero-about.col-2of2-reverse text{
 
-}
- 
- .hero-about h1, .hero-about p {
-	max-width: 37rem;
-}
-
-
-.hero-about img {
+.location img {
 	width: 25rem;
 	height: 100%;
 }
@@ -525,22 +466,22 @@ nav .search-bar {
 }
 
 /* ------ Alternating Content-----*/
-.alternating-content img {
+.alternating-content-img img {
 	width: 35rem;
 	height: 100%;
 }
 
-.alternating-content.col-2of2, .alternating-content.col-2of2-reverse  {
-	overflow: auto;
-	padding-left: 4rem;
-}
-
-.alternating-content.col-2of2-reverse {
-	float: right;
+.alternating-content-text  {
+	padding-left: 2rem;
+	padding-right: 2rem;
 }
 
 .alternating-content.col-2of2 p, .alternating-content.col-2of2-reverse p {
 	max-width: 25rem;
+}
+
+.grid.products {
+	padding-bottom: 5rem;
 }
 
 
@@ -630,10 +571,13 @@ h1.web {
 /* ------ Product Listings -------- */
 .container-product-listing, .product-item {
   position: relative;
+/*  padding-left: 2rem;
+  padding-right: 2rem;
+  /*flex-basis: 50%;*/
 }
 
-.container-product-listing img {
-  width: 40%;
+.product-item img {
+  width: 95%;
   height: auto;
   transition: .5s ease;
 }
@@ -678,7 +622,7 @@ p.price {
 	margin: 0;
 }
 
-.container-product-listing p.product-name {
+.product-item p.product-name {
 	font-family: "FreightBigPro-Book", Verdana, sans-serif;
 	font-size: 1.5rem;
 	letter-spacing: .08rem;
@@ -741,7 +685,6 @@ label {
 
 .sub-footer a {
 	color: #fff;
-	/*text-decoration: none;*/
 	opacity: 0.95;
 	letter-spacing: 0.03rem;
 
@@ -750,7 +693,6 @@ label {
 .sub-footer a:hover, .sub-footer a:focus {
 	opacity: 1;
 }
-
 
 
 /* ------ Support Template ------ */
