--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ section.sitemap img, section.mockups img {
 
  section .art-direction img {
  	display: block;
- } 
+ }
 
 /* ---------- Interactive Elements ---------- */
 /* ------ In-Text Link ------*/
@@ -381,14 +381,14 @@ nav.grid.topnav {
 
 nav.grid.topnav img.logo {
 	margin-left: 4rem;
-}  
+}
 
 nav.grid.topnav a {
 	padding-top: 1rem;
 	padding-bottom: 0;
 	font-size: 0.7rem;
 	letter-spacing: 0.03rem;
-}  
+}
 
  nav.grid.topnav input {
  	margin-top: 0.5rem;
@@ -716,3 +716,43 @@ label {
 	text-align: center;
 }
 /* ---------- Modular Elements Ends ---------- */
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+	background-color: #F5EFEB;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #DEAA9F;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+	padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
