--- a/css/grids.css
+++ b/css/grids.css
@@ -79,6 +79,8 @@ section.location .col-2of2{
 .review {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding-top: 3rem;
 }
 
 .review-content {
@@ -263,6 +265,40 @@ form .grid-col-1of2 {
 /* ---------- Media Queries ---------- */
 /* Phone and below */
 @media (max-width: 37em) {
+	/*----- Nav Bar ------*/
+	nav .search-bar input {
+    	font-size: 0.9rem;
+	}
+
+	nav .grid-col-1of6 a {
+    	font-size: 1rem;
+	}
+
+	/*----- About ------*/
+	.about-desc {
+  	 	 padding: 0rem 2rem 0rem 2rem;
+	}
+
+	.about > .hero > .text > h1 {
+		font-size: 1.7rem;
+		text-align: center;
+	}
+	
+	.hero .text { {
+		margin: 0;
+		padding-top: 3.5rem;
+   		padding-left: 3.5rem;
+	}
+
+	/*----- Shop ------*/
+	.shop h1, .shop p {
+		color: #FFF;
+	}
+
+	.shop .hero .text {
+		padding-left: 0;
+	}
+
 }
 
 /* Tablet and below */
@@ -315,15 +351,9 @@ form .grid-col-1of2 {
 	}
 
 	.hero .text {
-		  /*padding-top: 23rem;*/
 		  margin: auto;
 		  text-align: center;
 	}
-
-/*	section.about > .hero > .text {
-		padding-left: 0
-		padding-top: 0;
-	} */
 
 	.about > .hero > .text > h1 {
 		/*color: #474747;*/
@@ -428,8 +458,21 @@ form .grid-col-1of2 {
 		max-width: 20rem;
 		margin: auto;
 	}
-	
-}
+
+	.values img {
+		width: 25%;
+		height: auto;
+	}
+
+	.values {
+		text-align: center;
+	}
+
+	.values.col-2of3 img {
+		width: 22%;
+		height: auto;
+	}
+
 
 /* Desktop and below */
 @media (max-width: 75em) {
